# vault-secret-management

./: .env  .replit  .rv  README.md  pyproject.toml  setup.sh
ansible/: ansible.cfg  aws-credential-rotation.yml  inventory.ini  ssh-certificate.yml  vault-secrets.yml  vault-setup.yml
ansible/roles/vault/defaults/: main.yml
ansible/roles/vault/tasks/: main.yml
ansible/roles/vault/templates/: vault.service.j2
demo/: app.py  main.py  mock_vault.py  models.py  requirements.txt  routes.py
demo/instance/: vault_demo.db
demo/migrations/: README  alembic.ini  env.py
demo/templates/: activity.html  aws.html  dashboard.html  index.html  layout.html  roles.html  secrets.html  settings.html  ssh.html
scripts/: rotate-aws-creds.py  setup-github-auth.sh  setup-ldap-auth.sh  setup-vault-aws.sh  setup-vault-ssh.sh
vault/: .env  config.hcl  setup.sh
vault/policies/: admin-policy.hcl  app-policy.hcl  aws-policy.hcl  ssh-policy.hcl
