[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "hvac>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "flask-wtf>=1.2.2",
    "flask-migrate>=4.1.0",
]
